# egui-directx10

./: Cargo.toml  README.md  build_shaders.sh
examples/: egui-demo.rs
shaders/: egui.hlsl
src/: lib.rs  texture.rs
